--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@types/node": "^20.12.2",
         "@vitejs/plugin-vue": "^5.0.4",
+        "sass": "^1.72.0",
         "typescript": "^5.2.2",
         "vite": "^5.2.0",
         "vue-tsc": "^2.0.6"
